loading the intention dataset for splitting and tokenizing

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -21,6 +21,7 @@
     "- **Question:** Queries requiring driver input (\"How are the tyres feeling?\")\n",
     "- **Warning:** Alerts about potential issues (\"Watch your fuel consumption\")\n",
     "- **Strategy:** Long-term planning elements (\"We're looking at Plan B\")\n",
+    "- **Problem**: messages that ensures actual problems (\"My left wing is broken\")\n",
     "\n",
     "This classification will help our logic agent understand the purpose of each communication and respond appropriately.\n",
     "\n",
@@ -108,6 +109,7 @@
     "    Examples: \"We're looking at Plan B\", \"Target plus 5 on tyre management\", \"Consider an undercut\"\n",
     "\n",
     "6. **PROBLEM**: driver-reported issues:\n",
+    "\n",
     "    Examples: \"Losing grip on the rear\", \"My tires are dead\".\n",
     "\n",
     "---"
@@ -148,7 +150,9 @@
    "source": [
     "---\n",
     "\n",
-    "## Step 2: Manual Labeling Interface\n"
+    "## Step 2: Manual Labeling Interface\n",
+    "\n",
+    "I will make with Jupyet widgets a simple interface that helps me label the data. For this task, I´ll use `radio_filtered.csv`"
    ]
   },
   {
@@ -349,8 +353,121 @@
    "source": [
     "---\n",
     "\n",
-    "## Step 3: Training an intent classifier"
+    "## Step 3: Training an intent classifier\n",
+    "\n",
+    "Next steps are:\n",
+    "\n",
+    "1. *Splitting `intent_labeled_data.csv` into train/validation/test sets*.\n",
+    "\n",
+    "2. *Tokenize the dataset, adjusting the maximum tokens*\n",
+    "\n",
+    "3. *Download a pre-trained RoBERTa model and apply fine-tuning*.\n",
+    "\n",
+    "4. Try some runs, see how the performance improves and save the best model.\n",
+    "\n",
+    "The workflow here is quite similar to the one of `N03_bert_sentiment.ipynb`, but now predicting 6 classes instead of only 3.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Loading the dataset and applying mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (529, 2)\n",
+      "\n",
+      "First few rows:\n",
+      "\\Intent distribution:\n",
+      "intent\n",
+      "INFORMATION    211\n",
+      "PROBLEM        109\n",
+      "ORDER          107\n",
+      "STRATEGY        35\n",
+      "WARNING         34\n",
+      "QUESTION        33\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../../outputs/week4/radio_clean/intent_labeled_data.csv')\n",
+    "\n",
+    "# Display basic information about the dataset\n",
+    "print(f\"Dataset shape: {df.shape}\")\n",
+    "print(\"\\nFirst few rows:\")\n",
+    "\n",
+    "\n",
+    "print(\"\\Intent distribution:\")\n",
+    "print(df['intent'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                             message       intent\n",
+      "0  So don't forget Max, use your head please. Are...        ORDER\n",
+      "1  Okay Max, we're expecting rain in about 9 or 1...     QUESTION\n",
+      "2  You might find this lap that you meet a little...  INFORMATION\n",
+      "3  Just another two or three minutes to get throu...  INFORMATION\n",
+      "4   So settle into standard race management now Max.        ORDER\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create numeric labels based on sentiment values\n",
+    "# sentiment_mapping = {\n",
+    "#     'positive': 0, \n",
+    "#     'neutral': 1, \n",
+    "#     'negative': 2\n",
+    "# }\n",
+    "\n",
+    "\n",
+    "# df['label'] = df['sentiment'].map(sentiment_mapping)\n",
+    "\n",
+    "# # Check if we need to handle any missing mappings\n",
+    "# if df['label'].isna().sum() > 0:\n",
+    "#     print(f\"\\nWarning: {df['label'].isna().sum()} rows couldn't be mapped. Unique values in 'sentiment':\")\n",
+    "#     print(df['sentiment'].unique())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Splitting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
