made splited data

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -435,39 +435,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create numeric labels based on sentiment values\n",
-    "# sentiment_mapping = {\n",
-    "#     'positive': 0, \n",
-    "#     'neutral': 1, \n",
-    "#     'negative': 2\n",
-    "# }\n",
+    "# Create numeric labels based on intent values\n",
+    "intent_mapping = {\n",
+    "    'INFORMATION': 0, \n",
+    "    'PROBLEM': 1, \n",
+    "    'ORDER': 2,\n",
+    "    'STRATEGY': 3,\n",
+    "    'WARNING': 4,\n",
+    "    'QUESTION': 5,\n",
+    "}\n",
     "\n",
     "\n",
-    "# df['label'] = df['sentiment'].map(sentiment_mapping)\n",
+    "df['label'] = df['intent'].map(intent_mapping)\n",
     "\n",
-    "# # Check if we need to handle any missing mappings\n",
-    "# if df['label'].isna().sum() > 0:\n",
-    "#     print(f\"\\nWarning: {df['label'].isna().sum()} rows couldn't be mapped. Unique values in 'sentiment':\")\n",
-    "#     print(df['sentiment'].unique())\n"
+    "# Check if we need to handle any missing mappings\n",
+    "if df['label'].isna().sum() > 0:\n",
+    "    print(f\"\\nWarning: {df['label'].isna().sum()} rows couldn't be mapped. Unique values in 'intent':\")\n",
+    "    print(df['intent'].unique())\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Splitting the data"
+    "### 3.1 Splitting the data\n",
+    "\n",
+    "`Same text as N03_bert_sentiment.ipynb`\n",
+    "\n",
+    "I´ll follow the same splits techniques during the project, making a training, validation and test dataset. \n",
+    "\n",
+    "* *Train* will be 70% of the dataset.\n",
+    "* *Validation*: will be 15% of the dataset.\n",
+    "* *Test*: will be 15% of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 4: Create the train/validation/test split\n",
+    "train_texts, temp_texts, train_labels, temp_labels = train_test_split(\n",
+    "    df['message'].values, \n",
+    "    df['label'].values, \n",
+    "    test_size=0.3,  # 30% for val+test\n",
+    "    random_state=42, \n",
+    "    stratify=df['label']\n",
+    ")\n",
+    "\n",
+    "val_texts, test_texts, val_labels, test_labels = train_test_split(\n",
+    "    temp_texts,\n",
+    "    temp_labels,\n",
+    "    test_size=0.5,  # 50% of the 30% (so 15% of total)\n",
+    "    random_state=42,\n",
+    "    stratify=temp_labels\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set: 370 samples\n",
+      "Validation set: 79 samples\n",
+      "Test set: 80 samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training set: {len(train_texts)} samples\")\n",
+    "print(f\"Validation set: {len(val_texts)} samples\")\n",
+    "print(f\"Test set: {len(test_texts)} samples\")\n",
+    "# display(train_texts)\n",
+    "# display(train_labels)"
+   ]
   }
  ],
  "metadata": {
