roberta large for intention analysis, merging to dev, further work needed

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,21 +475,21 @@
    "source": [
     "from transformers import RobertaConfig\n",
     "\n",
-    "# Configuración personalizada para RoBERTa\n",
+    "# Custom configuration for RoBERTa\n",
     "config = RobertaConfig.from_pretrained('roberta-large')\n",
-    "config.hidden_dropout_prob = 0.2      # Aumentar de 0.1 (valor predeterminado) \n",
+    "config.hidden_dropout_prob = 0.2      # Increase from 0.1 (default value)\n",
     "config.attention_probs_dropout_prob = 0.2\n",
-    "config.classifier_dropout = 0.3       # Agregar dropout específico al clasificador\n",
-    "config.num_labels = 6                 # Establecer num_labels en la configuración\n",
-    "config.output_attentions = False      # Mover a la configuración\n",
-    "config.output_hidden_states = False   # Mover a la configuración\n",
+    "config.classifier_dropout = 0.3       # Add specific dropout to the classifier\n",
+    "config.num_labels = 6                 # Set num_labels in the configuration\n",
+    "config.output_attentions = False      # Move to configuration\n",
+    "config.output_hidden_states = False   # Move to configuration\n",
     "\n",
     "model_name = \"roberta-large\"  \n",
     "tokenizer = RobertaTokenizer.from_pretrained(model_name)\n",
     "model = RobertaForSequenceClassification.from_pretrained(\n",
     "    'roberta-large',\n",
     "    config=config\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -1410,19 +1410,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RoBERTa-large Intent Classification Model Performance\n",
+    "# Results Summary  \n",
     "\n",
-    "## Results Summary\n",
+    "## FIRST RUN  \n",
     "\n",
-    "### FIRST RUN\n",
-    "- **Best Validation Accuracy**: \n",
-    "- **Weighted F1 Score**: \n",
-    "- **Training Time**: \n",
+    "**Best Validation Accuracy:** 57%  \n",
+    "**Weighted F1 Score:** 0.60  \n",
+    "**Training Time:** [Not provided]  \n",
     "\n",
-    "## Class Performance\n",
+    "## Class Performance  \n",
     "\n",
+    "| Class      | Precision | Recall | F1-Score |\n",
+    "|------------|-----------|--------|----------|\n",
+    "| INFORMATION | 0.67      | 0.65   | 0.66     |\n",
+    "| PROBLEM     | 0.82      | 0.56   | 0.67     |\n",
+    "| ORDER       | 0.73      | 0.50   | 0.59     |\n",
+    "| STRATEGY    | 0.09      | 0.17   | 0.12     |\n",
+    "| WARNING     | 0.31      | 0.80   | 0.44     |\n",
+    "| QUESTION    | 1.00      | 0.60   | 0.75     |\n",
     "\n",
-    "## Analysis\n"
+    "## Analysis  \n",
+    "\n",
+    "The RoBERTa large model shows solid performance for a challenging multi-class classification task with significant class imbalance. With an overall accuracy of **57%** and a weighted F1 score of **0.60**, the model demonstrates good capability across most classes.  \n",
+    "\n",
+    "### Key observations:  \n",
+    "- **Strongest performance** on `QUESTION` (F1 = 0.75) and `PROBLEM` (F1 = 0.67) classes.  \n",
+    "- `WARNING` class shows **excellent recall** (0.80) but **lower precision** (0.31).  \n",
+    "- `STRATEGY` remains the **most challenging** class (F1 = 0.12) due to **limited examples**.  \n",
+    "- Majority classes (`INFORMATION`, `PROBLEM`, `ORDER`) show **balanced precision and recall**.  \n",
+    "\n",
+    "This model provides a **good foundation** for **F1 radio intent classification**, with potential for further refinement, specifically targeting the **STRATEGY** class if needed in the future.  \n"
    ]
   }
  ],
