saying that I ll use doccano for labbelling entity radios

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -1686,6 +1686,15 @@
     "else:\n",
     "    print(\"spaCy is using the CPU.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II) Label all radios with Doccano built-in methods.\n",
+    "\n",
+    "As I need to again label all the data with the different entities found in the radios, I will use Doccano , a tool that can help me speed-up the process."
+   ]
   }
  ],
  "metadata": {
