--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -1691,9 +1691,228 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II) Label all radios with Doccano built-in methods.\n",
+    "## II) Label all radios with SpaCy built-in methods.\n",
     "\n",
-    "As I need to again label all the data with the different entities found in the radios, I will use Doccano , a tool that can help me speed-up the process."
+    "As I need to again label all the data with the different entities found in the radios, I will use SpacY annotator , a tool that can help me speed-up the process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3082ef08753497c8b256bd5e57fc766",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='-1 examples annotated, 530 examples left')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "034fe3d6582647e7b979029e3bed3d75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='ACTION', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "adf5dbc7a9df4698b6aea2495075cd01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='SITUATION', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a47925a03be4263a08fa962c9654f8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='INCIDENT', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "907659fea432406099c02897849441cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='STRATEGY_INSTRUCTION', layout=Layout(width='auto'), placeholder='ent one, ent two,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e42d7b2ab35144cea08d7397145b1f33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='POSITION_CHANGE', layout=Layout(width='auto'), placeholder='ent one, ent two, ent …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1140514452934c65ab332511639049aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='PIT_CALL', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32b5d6258a8e4579bc6655b5e60de0ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='TRACK_CONDITION', layout=Layout(width='auto'), placeholder='ent one, ent two, ent …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d43c9417346e44e196d9fa81929237f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='TECHNICAL_ISSUE', layout=Layout(width='auto'), placeholder='ent one, ent two, ent …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "572db1d5585648e499a1126e2d3ef480",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='WEATHER', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b72e97bc85c442fa88ad2e72780d468c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(button_style='success', description='submit', style=ButtonStyle()), Button(button_style=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d844f91d393340b9bbf14c4a78a6adef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Annotator' object has no attribute 'save_annotations'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m annotations \u001b[38;5;241m=\u001b[39m annotator\u001b[38;5;241m.\u001b[39mannotate(df\u001b[38;5;241m=\u001b[39mdf, col_text\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mradio_message\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# 5. Guardar las anotaciones cuando termines\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m \u001b[43mannotator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_annotations\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../outputs/week4/radio_clean/f1_radio_entity_annotations.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Annotator' object has no attribute 'save_annotations'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "from spacy_annotator import Annotator\n",
+    "\n",
+    "# 1. Cargar mensajes\n",
+    "df = pd.read_csv('../../outputs/week4/radio_clean/radio_filtered.csv')\n",
+    "\n",
+    "# 2. Definir etiquetas\n",
+    "labels = [\"ACTION\", \"SITUATION\", \"INCIDENT\", \"STRATEGY_INSTRUCTION\", \n",
+    "          \"POSITION_CHANGE\", \"PIT_CALL\", \"TRACK_CONDITION\", \n",
+    "          \"TECHNICAL_ISSUE\", \"WEATHER\"]\n",
+    "\n",
+    "# 3. Crear el anotador\n",
+    "annotator = Annotator(labels=labels)\n",
+    "\n",
+    "# 4. Iniciar la anotación interactiva\n",
+    "annotations = annotator.annotate(df=df, col_text='radio_message')\n",
+    "\n",
+    "# 5. Guardar las anotaciones manualmente\n",
+    "# Revisar qué contiene annotations\n",
+    "print(type(annotations))\n",
+    "\n",
+    "# Guardar según el tipo de dato retornado\n",
+    "if isinstance(annotations, pd.DataFrame):\n",
+    "    annotations.to_json('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', orient='records')\n",
+    "else:\n",
+    "    # Si es un diccionario o lista\n",
+    "    with open('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', 'w', encoding='utf-8') as f:\n",
+    "        json.dump(annotations, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(\"Anotaciones guardadas correctamente\")"
    ]
   }
  ],
