finished ner annotations, merging to dev and main

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1704,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3082ef08753497c8b256bd5e57fc766",
+       "model_id": "0d25942b79f14f76b0a8a96330cd6c7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1718,7 +1718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "034fe3d6582647e7b979029e3bed3d75",
+       "model_id": "85462875f8ef4ada92a466d8146d77b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1732,7 +1732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adf5dbc7a9df4698b6aea2495075cd01",
+       "model_id": "b26ece246cb841b0b105064d51f8d941",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1746,7 +1746,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a47925a03be4263a08fa962c9654f8a",
+       "model_id": "39ee99a5662d4896bc16c3d3510760ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1760,7 +1760,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "907659fea432406099c02897849441cd",
+       "model_id": "09e6e852f4fa4ef0a9d1f4f0df5d0e91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1774,7 +1774,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e42d7b2ab35144cea08d7397145b1f33",
+       "model_id": "a6c6b8aec1bd4aab9e25447b309a9783",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1788,7 +1788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1140514452934c65ab332511639049aa",
+       "model_id": "413dbf64466842c49a55d72b497e4d0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1802,7 +1802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32b5d6258a8e4579bc6655b5e60de0ba",
+       "model_id": "15fbb54c5a974e1293a7cf4c9abe1f59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1816,7 +1816,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d43c9417346e44e196d9fa81929237f0",
+       "model_id": "0ad137343efc4c7f87eb308dcc0adadc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1830,7 +1830,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "572db1d5585648e499a1126e2d3ef480",
+       "model_id": "79ad05bcd5564340a0a67df546ca1174",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1844,7 +1844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b72e97bc85c442fa88ad2e72780d468c",
+       "model_id": "df4ea4ebf48a4e2c87720ee9bc676667",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1858,7 +1858,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d844f91d393340b9bbf14c4a78a6adef",
+       "model_id": "7c7cf4617cfa4d268bbba84ebf7217ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1870,49 +1870,58 @@
      "output_type": "display_data"
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Annotator' object has no attribute 'save_annotations'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m annotations \u001b[38;5;241m=\u001b[39m annotator\u001b[38;5;241m.\u001b[39mannotate(df\u001b[38;5;241m=\u001b[39mdf, col_text\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mradio_message\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# 5. Guardar las anotaciones cuando termines\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m \u001b[43mannotator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_annotations\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../outputs/week4/radio_clean/f1_radio_entity_annotations.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Annotator' object has no attribute 'save_annotations'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Anotaciones guardadas correctamente\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import json\n",
-    "from spacy_annotator import Annotator\n",
+    "# import pandas as pd\n",
+    "# import json\n",
+    "# from spacy_annotator import Annotator\n",
     "\n",
-    "# 1. Cargar mensajes\n",
-    "df = pd.read_csv('../../outputs/week4/radio_clean/radio_filtered.csv')\n",
+    "# # 1. Load Messages\n",
+    "# df = pd.read_csv('../../outputs/week4/radio_clean/radio_filtered.csv')\n",
     "\n",
-    "# 2. Definir etiquetas\n",
-    "labels = [\"ACTION\", \"SITUATION\", \"INCIDENT\", \"STRATEGY_INSTRUCTION\", \n",
-    "          \"POSITION_CHANGE\", \"PIT_CALL\", \"TRACK_CONDITION\", \n",
-    "          \"TECHNICAL_ISSUE\", \"WEATHER\"]\n",
+    "# # 2. Defining labels\n",
+    "# labels = [\"ACTION\", \"SITUATION\", \"INCIDENT\", \"STRATEGY_INSTRUCTION\", \n",
+    "#           \"POSITION_CHANGE\", \"PIT_CALL\", \"TRACK_CONDITION\", \n",
+    "#           \"TECHNICAL_ISSUE\", \"WEATHER\"]\n",
     "\n",
-    "# 3. Crear el anotador\n",
-    "annotator = Annotator(labels=labels)\n",
+    "# # 3. Creating the Annotator\n",
+    "# annotator = Annotator(labels=labels)\n",
     "\n",
-    "# 4. Iniciar la anotación interactiva\n",
-    "annotations = annotator.annotate(df=df, col_text='radio_message')\n",
+    "# # 4. Initializing interactive annotation\n",
+    "# annotations = annotator.annotate(df=df, col_text='radio_message')\n",
     "\n",
-    "# 5. Guardar las anotaciones manualmente\n",
-    "# Revisar qué contiene annotations\n",
-    "print(type(annotations))\n",
+    "# # 5. Store manually the annotations\n",
+    "# # Check annotations variable type\n",
+    "# print(type(annotations))\n",
     "\n",
-    "# Guardar según el tipo de dato retornado\n",
-    "if isinstance(annotations, pd.DataFrame):\n",
-    "    annotations.to_json('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', orient='records')\n",
-    "else:\n",
-    "    # Si es un diccionario o lista\n",
-    "    with open('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', 'w', encoding='utf-8') as f:\n",
-    "        json.dump(annotations, f, ensure_ascii=False, indent=2)\n",
+    "# # Store depending of datatype returned\n",
+    "# if isinstance(annotations, pd.DataFrame):\n",
+    "#     annotations.to_json('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', orient='records')\n",
+    "# else:\n",
+    "#     # If a dictionary or list\n",
+    "#     with open('../../outputs/week4/radio_clean/f1_radio_entity_annotations.json', 'w', encoding='utf-8') as f:\n",
+    "#         json.dump(annotations, f, ensure_ascii=False, indent=2)\n",
     "\n",
-    "print(\"Anotaciones guardadas correctamente\")"
+    "# print(\"Annotations Stored Correctly\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# annotations = annotations.drop(columns=['sentiment'])\n",
+    "# annotations.head()\n",
+    "# annotations.to_csv('../../outputs/week4/NER/f1_radio__entity_annotations.csv', index=False)\n",
+    "# annotations.to_json('../../outputs/week4/NER/f1_radio_entity_annotations.json', orient='records')"
    ]
   }
  ],
