added and finished ner models. Disclaimer, the development process can be seen in nlp portfolio, session 10 after class. Mering to dev and main

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -1615,23 +1615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SpaCy is a strong choice for your F1-specific Named Entity Recognition task. Let's analyze this option and how to approach it:\n",
-    "\n",
-    "## SpaCy NER Advantages for F1 Domain\n",
-    "\n",
-    "1. **Domain-specific training**: SpaCy excels at learning specialized entity patterns from limited data (a few hundred examples can yield good results).\n",
-    "\n",
-    "2. **Production efficiency**: Fast inference speeds, which is crucial for real-time race strategy decisions.\n",
-    "\n",
-    "3. **Pipeline integration**: Seamlessly combines with your existing RoBERTa intent classifier.\n",
-    "\n",
-    "4. **Visualization tools**: Built-in entity visualizers for debugging and presentations.\n",
-    "\n",
-    "5. **Structured output**: Naturally outputs JSON-compatible structured data.\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Proposed Custom NER Entities for F1 Radio Messages\n",
+    "## II) Update: Proposed Custom NER Entities for F1 Radio Messages\n",
     "\n",
     "Since you already have key variables (driver, team, current tyres, and lap) provided by your external dataset, I would suggest focusing on additional entities that capture the dynamic aspects of radio communications. In this context, I propose about **10 custom entities** to complement your JSON analysis:\n",
     "\n",
@@ -1659,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I) GPU Training with Spacy\n",
+    "## I) GPU Training with Spacy check\n",
     "\n",
     "Spacy also can be trained on a GPU, significantly accelerating the process:"
    ]
@@ -1922,6 +1906,22 @@
     "# annotations.head()\n",
     "# annotations.to_csv('../../outputs/week4/NER/f1_radio__entity_annotations.csv', index=False)\n",
     "# annotations.to_json('../../outputs/week4/NER/f1_radio_entity_annotations.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III) Training the Entity Recognition Model\n",
+    "\n",
+    "As this task will ocuppy some space, I will create a new notebook, called `N05_ner_models.ipynb`, where I will be trying and discussing the best model for this task."
    ]
   }
  ],
