--- a/scripts/NLP_radio_processing/N06_model_merging.ipynb
+++ b/scripts/NLP_radio_processing/N06_model_merging.ipynb
@@ -39,23 +39,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 1. Import Necessary Libraries"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "import os\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import spacy\n",
+    "import whisper"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "f1_strat_manager",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
