added configuration to radio merging and changed some minor names to the other nlp notebooks

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -1582,7 +1582,9 @@
     "\n",
     "#### Therefore, I believe our **Roberta-large** model is the strongest one, so I will stick to it.\n",
     "\n",
-    "**Disclaimer**: although I will use the roberta weights of `best_roberta_large_intent_model.pt`, the code will show the outputs of Deberta Model. To see the other metrics, please, uncomment and comment the correspondent cells. \n",
+    "### **Disclaimer**: \n",
+    "\n",
+    "Although I will use the roberta weights of `best_roberta_large_intent_model.pt`, the code will show the outputs of Deberta Model. To see the other metrics, please, uncomment and comment the correspondent cells. \n",
     "\n",
     "Deberta weights are stored in `best_deberta_large_intent_model`.\n",
     "\n",
