--- a/scripts/NLP_radio_processing/N05_ner_models.ipynb
+++ b/scripts/NLP_radio_processing/N05_ner_models.ipynb
@@ -2664,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2691,7 +2691,7 @@
     "#         best_f1 = val_metrics['f1']\n",
     "#         # Move to CPU to avoid CUDA errors\n",
     "#         model_cpu = model.cpu()\n",
-    "#         torch.save(model_cpu.state_dict(), 'best_focused_bert_model.pt')\n",
+    "#         torch.save(model_cpu.state_dict(), '../../outputs/week4/models/best_focused_bert_model.pt')\n",
     "#         # Restore to GPU\n",
     "#         model = model.to(device)\n",
     "#         print(f\"New best model saved with F1: {best_f1:.4f}\")\n",
