--- a/scripts/NLP_radio_processing/N06_model_merging.ipynb
+++ b/scripts/NLP_radio_processing/N06_model_merging.ipynb
@@ -40,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Import Necessary Libraries"
+    "## 1. Import Necessary Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,74 @@
     "import spacy\n",
     "import whisper"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Configuration\n",
+    "\n",
+    "In this cell, I will configure the format of the JSON. It is necessary to specify:\n",
+    "\n",
+    "- The model paths: \n",
+    "    - ``../../outputs/week4/models/best_roberta_sentiment_model.pt``: best sentiment model developed.\n",
+    "    - ``../../outputs/week4/models/best_roberta_large_intent_model.pt``: best intent model developed.\n",
+    "    - ``../../outputs/week4/models/best_focused_bert_model.pt``: best NER model.\n",
+    "    - `Whisper turbo` model.\n",
+    "    \n",
+    "- Label mapppings of the models:\n",
+    "    - **sentiment**: positive, negative, neutral.\n",
+    "    - **intention**: INFORMATION, PROBLEM, ORDER, STRATEGY, WARNING, QUESTION.\n",
+    "    - **NER**: ACTION, SITUATION, INCIDENT, STRATEGY_INSTRUCTION, POSITION_CHANGE, PIT_CALL, TRACK_CONDITION, TECHNICAL_ISSUE, WEATHER.\n",
+    "\n",
+    "- Demo input for making the correct structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration loaded successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configure model paths and settings - adjusted to match your specific models\n",
+    "CONFIG = {\n",
+    "    # Model paths\n",
+    "    \"sentiment_model_path\": \"../../outputs/week4/models/best_roberta_sentiment_model.pt\",\n",
+    "    \"intent_model_path\": \"../../outputs/week4/models/best_roberta_large_intent_model.pt\",\n",
+    "    \"ner_model_path\": \"../../outputs/week4/models/best_focused_bert_model.pt\",\n",
+    "    \"whisper_model_size\": \"turbo\",  # Using Whisper turbo \n",
+    "    \n",
+    "    # Label mappings\n",
+    "    \"sentiment_labels\": [\"positive\", \"negative\", \"neutral\"],\n",
+    "    \"intent_labels\": [\"INFORMATION\", \"PROBLEM\", \"ORDER\", \"STRATEGY\", \"WARNING\", \"QUESTION\"],\n",
+    "    \n",
+    "    # Entity mapping (SpaCy entity labels → output format)\n",
+    "    \"entity_mapping\": {\n",
+    "        \"ACTION\": \"action\",\n",
+    "        \"SITUATION\": \"situation\",\n",
+    "        \"INCIDENT\": \"incident\",\n",
+    "        \"STRATEGY_INSTRUCTION\": \"strategy\",\n",
+    "        \"POSITION_CHANGE\": \"position\",\n",
+    "        \"PIT_CALL\": \"pit\",\n",
+    "        \"TRACK_CONDITION\": \"track\",\n",
+    "        \"TECHNICAL_ISSUE\": \"technical\",\n",
+    "        \"WEATHER\": \"weather\"\n",
+    "    },\n",
+    "    \n",
+    "    # Demo inputs\n",
+    "    \"example_text\": \"Box this lap for softs, Hamilton is catching up\"\n",
+    "}\n",
+    "\n",
+    "print(\"Configuration loaded successfully\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -66,7 +134,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
